# percepta-inferencer

./: .env-local  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: inference.py  main.py
src/config/: config.py  consumer.py  logging.py  redis.py
